InternexDev_Sandbox/src/objects/WF_PPE__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name(PPE01)</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_code__c</fullName>
        <label>Postal code(PPE11)</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;PPE&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>WF_PPE</relationshipLabel>
        <relationshipName>WF_PPE</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WF_PPE</label>
    <nameField>
        <displayFormat>PPE-{00000}</displayFormat>
        <label>WF_PPE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_PPE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>